make tabs in extrnal file

--- a/index.html
+++ b/index.html
@@ -196,16 +196,18 @@
         <script src="./resources/jquery.min.js"></script> 
         <!-- Bootstrap Lib -->
         <script src="./resources/bootstrap.bundle.min.js"></script>
+        <!-- Tabs Plugin -->
+        <script src="./resources/tabs.js"></script>
         <!-- Data Table lib -->
         <script src="./resources/jquery.dataTables.js"></script>
         <!-- Row Record -->
-        <script src="./resources/dataTables.rowReorder.min.js"></script>
+        <scrip src="./resources/dataTables.rowReorder.min.js"></scrip>
         <!-- Zooming Img Plugin -->
-        <script src="./resources/openseadrag/openseadragon.min.js"></script>
+        <scrip src="./resources/openseadrag/openseadragon.min.js"></scrip>
         <!-- Our Main Js file -->
-        <script src="./resources/main.js"></script>
+        <scrip src="./resources/main.js"></scrip>
         <!--Backend Js file (shit starts here) -->
-        <script src="./resources/backend.js"></script>
+        <scrip src="./resources/backend.js"></scrip>
 
 
         <!--==========================
