--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <div id="wheelzoom.exe" style="display: block;"></div> <!--= the image container =-->
             </div>
             
+                <script src="./resources/openseadrag/openseadragon.min.js"></script>
                 <script type="text/javascript">
                     var viewer = OpenSeadragon({
                         id: "wheelzoom.exe",
@@ -196,19 +197,16 @@
         <script src="./resources/jquery.min.js"></script> 
         <!-- Bootstrap Lib -->
         <script src="./resources/bootstrap.bundle.min.js"></script>
-        <!-- Tabs Plugin -->
-        <script src="./resources/tabs.js"></script>
         <!-- Data Table lib -->
         <script src="./resources/jquery.dataTables.js"></script>
         <!-- Row Record -->
-        <scrip src="./resources/dataTables.rowReorder.min.js"></scrip>
+        <script src="./resources/dataTables.rowReorder.min.js"></script>
         <!-- Zooming Img Plugin -->
-        <scrip src="./resources/openseadrag/openseadragon.min.js"></scrip>
+        <script src="./resources/jquery.fs.zoomer.js"></script>
         <!-- Our Main Js file -->
-        <scrip src="./resources/main.js"></scrip>
+        <script src="./resources/main.js"></script>
         <!--Backend Js file (shit starts here) -->
-        <scrip src="./resources/backend.js"></scrip>
-
+        <script src="./resources/backend.js"></script>
 
         <!--==========================
             END JS SCRIPTS
