add clean teble 2 alert

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         <script src="./resources/jquery.min.js"></script> 
         <!-- Bootstrap Lib -->
         <script src="./resources/bootstrap.bundle.min.js"></script>
+        <!-- Tabs Plugins -->
         <script src="./resources/tabs.js"></script>
         <!-- Data Table lib -->
         <script src="./resources/jquery.dataTables.js"></script>
@@ -190,8 +191,10 @@
         <script src="./resources/openseadrag/openseadragon.min.js"></script>
         <!-- Our Main Js file -->
         <script src="./resources/main.js"></script>
-        <!--Backend Js file (shit starts here) -->
+        <!-- Backend Js file (shit starts here) -->
         <script src="./resources/backend.js"></script>
+        <!-- Sweet Alert -->
+        <script src="resources/sweetalert.js"></script>
 
         <!--==========================
             END JS SCRIPTS
