add alert to collect data btn & edit zoomer btns

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         ==========================-->
         <section id="section3" class="tabbed">
             <!-- image-->
-            <div class="zoomer" style="background-color: lightgrey;"> <!--= container: made to make a backgroud-color  =-->
+            <div class="zoomer"> <!--= container: made to make a backgroud-color  =-->
                 <div id="wheelzoom.exe"></div> <!--= the image container =-->
             </div>
             <!-- Buttons -->
