--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             START TAB 1 CONTENT
         ==========================-->
         <section id="section1" class="tabbed tabbed_default">
-            <table id="full_table" class="display table table-bordered">
+            <table id="full_table" class="display table table-bordered" style="width:100%">
 
             </table>
         </section>
@@ -72,7 +72,7 @@
                     <button id="collect_data_t2" class="btn_2 icon-star-2">تكوين</button>
                 </div>
             </div>
-            <table id="empty_table" class="display table table-bordered"> 
+            <table id="empty_table" class="display table table-bordered" style="width:100%"> 
             </table>  
         </section>
         <!--==========================
