--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         ==========================-->
         <section id="section3" class="tabbed">
             <!-- image-->
-            <div class="zoomer"> <!--= container: made to make a backgroud-color  =-->
+            <div class="zoomer" style='background-color: grey;'> <!--= container: made to make a backgroud-color  =-->
                 <div id="wheelzoom.exe"></div> <!--= the image container =-->
             </div>
             <!-- Buttons -->
@@ -133,24 +133,20 @@
                         <label class="d_2 ">: ترتيب عشوائي للمسائل</label>
                     </div>
                     <div class="line"></div>
-                    <div class="cheack_2">
-                        <input class="form-check-input position-static" type="checkbox" id="blankCheckbox">
-                        <label>: تضمين ورقة الاجابات</label>
-                    </div>
                     <div class="line"></div>
                     <div class="color_peacker_1">
                         <input type="color" id="favcolor" name="favcolor" value="#000">
-                        <label>: أختر اللون</label>
+                        <label>: لون العناوين الرئيسية</label>
                     </div>
                     <div class="line"></div>
                     <div class="color_peacker_2">
                         <input type="color" id="favcolor" name="favcolor" value="#000">
-                        <label>: أختر اللون</label>
+                        <label>: لون المسائل</label>
                     </div>
                     <div class="line"></div>
                     <div class="color_peacker_3">
                         <input type="color" id="favcolor" name="favcolor" value="#000">
-                        <label>: أختر اللون</label>
+                        <label>: لون المعادلات</label>
                     </div>
                     <div class="line"></div>
                     <div class="save-btn">
@@ -176,7 +172,6 @@
         <!--==========================
             START JS SCRIPTS
         ==========================-->
-
         <!-- jQuery Lib -->
         <script src="./resources/jquery.min.js"></script> 
         <!-- Bootstrap Lib -->
