--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
         <!--==========================
             START JS SCRIPTS
         ==========================-->
+        <!-- JS&Python ACCESS - [[RadioActive]]/[[DON'T REMOVE]] -->
+        <script type="text/javascript" src="./eel.js"></script>
         <!-- jQuery Lib -->
         <script src="./resources/jquery.min.js"></script> 
         <!-- Bootstrap Lib -->
@@ -190,7 +192,7 @@
         <script src="./resources/backend.js"></script>
         <!-- Sweet Alert -->
         <script src="resources/sweetalert.js"></script>
-
+        
         <!--==========================
             END JS SCRIPTS
         ==========================-->
