--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <button class="btn_2 icon-file">حفظ</button>
-                    <button class="btn_2 icon-star-2">أظهر الإجابة</button>
+                    <button id="ToggleImages" class="btn_2 icon-star-2">أظهر الإجابة</button>
                 </div>
             </div>
         </section>
