--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <!-- Buttons -->
             <div class="row">
                 <div class="col-12 text-center">
-                    <button class="btn_2 icon-file">حفظ</button>
+                    <button id="saveImage" class="btn_2 icon-file">حفظ</button>
                     <button id="ToggleImages" class="btn_2 icon-star-2">أظهر الإجابة</button>
                 </div>
             </div>
