--- a/index.html
+++ b/index.html
@@ -83,14 +83,19 @@
             START TAB 3 CONTENT
         ==========================-->
         <section id="section3" class="tabbed">
+            <div id='Tap3_loader_container'>
+                <div class="Tap3_loader"></div>
+                <div id='Tap3_loader_text'>إنتظر...جارى التكوين</div>
+            </div>
+            
             <!-- image-->
-            <div class="zoomer" style='background-color: grey;'> <!--= container: made to make a backgroud-color  =-->
+            <div class="zoomer"> <!--= container: made to make a backgroud-color  =-->
                 <div id="wheelzoom.exe"></div> <!--= the image container =-->
             </div>
             <!-- Buttons -->
             <div class="row">
                 <div class="col-12 text-center">
-                    <button id="saveImage" class="btn_2 icon-file">حفظ</button>
+                    <button id="saveImage" class="btn_2 icon-file">فتح مكان الحفظ</button>
                     <button id="ToggleImages" class="btn_2 icon-star-2">أظهر الإجابة</button>
                 </div>
             </div>
