--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <!--==========================
             START CSS FILES
         ==========================-->
-
+        <!-- happiness Lib -->
+        <link play='https://www.youtube.com/watch?v=0Gkhol2Q1og' style='loop: true;'>
         <!-- Bootstrap Lib -->
         <link rel="stylesheet" href="./resources/bootstrap.min.css">
         <!-- Data Table Lib -->
