addding setting modal

--- a/index.html
+++ b/index.html
@@ -44,11 +44,113 @@
             <li class="nav-item"><a class="nav-link active" data-tabby-default href="#section1">جدول المسائل</a></li>
             <li class="nav-item"><a class="nav-link" href="#section2">جدول المختارات</a></li>
             <li class="nav-item"><a class="nav-link" href="#section3">معاينة النتيجة</a></li>
-            <li class="nav-item"><a class="nav-link" href="#section4">الإعدادات</a></li>
-            <li class="nav-item"><a class="nav-link" href="#section5">عن البرنامج</a></li>
+            <li class="nav-item"><a class="nav-link" href="#section4">عن البرنامج</a></li>
         </ul>
         <!--==========================
             END TABS
+        ==========================-->
+
+        <!--==========================
+            START SETTING MODAL
+        ==========================-->
+        <div class="setting_modal_btn">
+            <button href="#" class="icon-cog" data-toggle="modal" data-target="#basicModal"></button>
+        </div>
+
+        <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close mr-auto" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">الأعدادات</h4>
+                    </div>
+                    <div class="modal-body">
+                        <!-- Font Type -->
+                        <div class="row mb-30">
+                            <div class="col-10">
+                                <div class="select">
+                                    <select name="slct" id="slct">
+                                    <option selected>font1</option>
+                                    <option value="1">font2</option>
+                                    <option value="2">font3</option>
+                                    <option value="3">font4</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-2 pr-0 pl-0">
+                                <label class="a_2 col-form-label pl_fix"><span >: نوع الخط</span></label>
+                            </div>
+                        </div>
+                        <!-- Font Size -->
+                        <div class="row mb-30">
+                            <div class="col-10">
+                                <input class="b_1" type="number" min="40" max="100" placeholder="70" required>
+                            </div>
+                            <div class="col-2 pl-0 pr-0">
+                                <label class="b_2 col-form-label">: حجم الخط</label>
+                            </div>
+                        </div>
+                        <!-- Papper Number -->
+                        <div class="row mb-30">
+                            <div class="col-7">
+                                <input class="paper_num" type="number" min="1" max="500" placeholder="1" required>
+                            </div>
+                            <div class="col-5 pl-0 pr-0">
+                                <label class="c_2 col-form-label pr_fix">: عدد الأوراق المطلوب تكوينها</label>
+                            </div>
+                        </div>
+                        <!-- random cheakbox -->
+                        <div class="row mb-30">
+                            <div class="col-8">
+                                <div class="cheack_1 pl_big_fix">
+                                    <input class="d_1 form-check-input position-static" type="checkbox" id="blankCheckbox">
+                                </div>
+                            </div>
+                            <div class="col-4 pl-0 pr-0">
+                                <label class="d_2">: ترتيب عشوائي للمسائل</label>
+                            </div>
+                        </div>
+                        <!-- Colors-->
+                        <div class="row">
+                            <!-- Color 1 -->
+                            <div class="col-8 pl_fix_2">
+                                <div class="color_peacker_1 mb-30">
+                                    <input type="color" id="favcolor" name="favcolor" value="#000000">
+                                </div>
+                            </div>
+                            <div class="col-4 pr-0">
+                                <label>: لون العناوين الرئيسية</label>
+                            </div>
+                            <!-- Color 2 -->
+                            <div class="col-8 pl_fix_2">
+                                <div class="color_peacker_2 mb-30">
+                                    <input type="color" id="favcolor" name="favcolor" value="#000000">
+                                </div>
+                            </div>
+                            <div class="col-4 pr-0 pl_fix_3">
+                                <label>: لون المسائل</label>
+                            </div>
+                            <!-- Color 3 -->
+                            <div class="col-8 pl_fix_2">
+                                <div class="color_peacker_3 ">
+                                    <input type="color" id="favcolor" name="favcolor" value="#000000">
+                                </div>
+                            </div>
+                            <div class="col-4 pr-0 pl_fix_4">
+                                <label>: لون المعادلات</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="save_setting">حفظ الإعدادات</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--==========================
+            END SETTING MODAL
         ==========================-->
 
         <!--==========================
@@ -114,70 +216,10 @@
             START TAB 4 CONTENT
         ==========================-->
         <section id="section4" class="tabbed">
-            <div class="setting_wrapper">
-                <div class="df_setting">
-                    <div class="font_type">
-                        <div class="a_1">
-                            <select class="form-control ">
-                                <option>dexter</option>
-                                <option>preacher</option>
-                                <option>got</option>
-                                <option>nabil elbono</option>
-                                <option>abdo</option>
-                            </select>
-                        </div>
-                        <label class="a_2 col-form-label"><span >: نوع الخط</span></label>
-                    </div>
-                    <div class="line"></div>
-                    <div class="font_size">
-                        <input class="b_1" type="number" min="40" max="100" placeholder="70" required>
-                        <label class="b_2 col-form-label">: حجم الخط</label>
-                    </div>
-                    <div class="line"></div>
-                    <div class="papper_number">
-                        <input type="number" min="1" max="500" placeholder="1" required>
-                        <label class="c_2 col-form-label">: عدد الأوراق المطلوب تكوينها</label>
-                    </div>
-                    <div class="line"></div>
-                    <div class="cheack_1">
-                        <input class="d_1 form-check-input position-static" type="checkbox" id="blankCheckbox">
-                        <label class="d_2 ">: ترتيب عشوائي للمسائل</label>
-                    </div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="color_peacker_1">
-                        <input type="color" id="favcolor" name="favcolor" value="#000000">
-                        <label>: لون العناوين الرئيسية</label>
-                    </div>
-                    <div class="line"></div>
-                    <div class="color_peacker_2">
-                        <input type="color" id="favcolor" name="favcolor" value="#000000">
-                        <label>: لون المسائل</label>
-                    </div>
-                    <div class="line"></div>
-                    <div class="color_peacker_3">
-                        <input type="color" id="favcolor" name="favcolor" value="#000000">
-                        <label>: لون المعادلات</label>
-                    </div>
-                    <div class="line"></div>
-                    <div class="save-btn">
-                        <button class="btn_2 icon-cog float-right">حفظ الإعدادات</button>
-                    </div>
-                </div>
-            </div>
+
         </section>
         <!--==========================
             END TAB 4 CONTENT
-        ==========================-->
-
-        <!--==========================
-            START TAB 5 CONTENT
-        ==========================-->
-        <section id="section5" class="tabbed">
-
-        </section>
-        <!--==========================
-            END TAB 5 CONTENT
         ==========================-->
 
         <!--==========================
