--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!--==========================
             START SETTING MODAL
         ==========================-->
-        <div class="setting_modal_btn">
+        <div id='settings' class="setting_modal_btn">
             <button href="#" class="icon-cog" data-toggle="modal" data-target="#basicModal"></button>
         </div>
 
