--- a/settings_TEMAPLE/index.html
+++ b/settings_TEMAPLE/index.html
@@ -5,7 +5,7 @@
         <title>FUCK HTML&CSS&JS - Settings panel.</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cairo">
     </head>
     <body>
         <!-- ON: https://www.youtube.com/watch?v=R_TbF5m5KpU -->
