semi final touch..

--- a/settings_TEMAPLE/index.html
+++ b/settings_TEMAPLE/index.html
@@ -24,7 +24,7 @@
                                 <option>Option 3</option>
                             </select>
                         </div>
-                        <label class="form-item__label">:نوع الخط</label>
+                        <label class="form-item__label">:نوع الـخط</label>
                     </div>
                     <div class='line'></div>
                     <div class="form-item">
@@ -44,6 +44,7 @@
                     <div class="form-item">
                         <div class="form-item__control toggle">
                             <div class="toggle__handle"></div>
+                            <div id='chkbxt'>مفعل</div>
                         </div>
                         <label class="form-item__label">:ترتيب عشوائى</label>
                     </div>
@@ -51,8 +52,9 @@
                     <div class="form-item">
                         <div class="form-item__control toggle">
                             <div class="toggle__handle"></div>
+                            <div id='chkbxt'>مفعل</div>
                         </div>
-                        <label class="form-item__label">:وضع المطور</label>
+                        <label class="form-item__label">:وضـع المـطـور</label>
                     </div>
                     <div class='line'></div>
                     <h3>الآلوان</h3>
