--- a/settings_TEMAPLE/index.html
+++ b/settings_TEMAPLE/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>FUCK HTML&CSS&JS - Settings panel.</title>
         <link rel="stylesheet" href="./style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cairo">
     </head>
     <body>
@@ -29,14 +28,14 @@
                     <div class='line'></div>
                     <div class="form-item">
                         <div class="form-item__control">
-                            <input type="number" min="40" max="100" value="70" required="">
+                            <input class='settingsInput' type="number" min="40" max="100" value="70" required="">
                         </div>
                         <label class="form-item__label">:حجم الخط</label>
                     </div>
                     <div class='line'></div>
                     <div class="form-item">
                         <div class="form-item__control">
-                            <input type="number" min="1" max="250" value="1" required="">
+                            <input class='settingsInput' type="number" min="1" max="250" value="1" required="">
                         </div>
                         <label class="form-item__label">:عدد الأوراق</label>
                     </div>
@@ -61,21 +60,21 @@
                     <div class='line'></div>
                     <div class="form-item">
                         <div class="form-item__control">
-                            <input type="color" id="favcolor" name="favcolor" value="#000000">
+                            <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
                         </div>
                         <label class="form-item__label">:لون رئيسى</label>
                     </div>
                     <div class='line'></div>
                     <div class="form-item">
                         <div class="form-item__control">
-                            <input type="color" id="favcolor" name="favcolor" value="#000000">
+                            <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
                         </div>
                         <label class="form-item__label">:لون ثانوى</label>
                     </div>
                     <div class='line'></div>
                     <div class="form-item">
                         <div class="form-item__control">
-                            <input type="color" id="favcolor" name="favcolor" value="#000000">
+                            <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
                         </div>
                         <label class="form-item__label">:لون هامشى</label>
                     </div>
