fixed a slight thing on colorpicker - settings panel

--- a/index.html
+++ b/index.html
@@ -119,21 +119,27 @@ START SETTING MODAL
                                     <div class='line'></div>
                                     <div class="form-item">
                                         <div class="form-item__control">
-                                            <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
+                                            <div class='parentCP'>
+                                                <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
+                                            </div>
                                         </div>
                                         <label class="form-item__label">:لون رئيسى</label>
                                     </div>
                                     <div class='line'></div>
                                     <div class="form-item">
                                         <div class="form-item__control">
-                                            <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
+                                            <div class='parentCP'>
+                                                <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
+                                            </div>
                                         </div>
                                         <label class="form-item__label">:لون ثانوى</label>
                                     </div>
                                     <div class='line'></div>
                                     <div class="form-item">
                                         <div class="form-item__control">
-                                            <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
+                                            <div class='parentCP'>
+                                                <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
+                                            </div>
                                         </div>
                                         <label class="form-item__label">:لون هامشى</label>
                                     </div>
