new slight edits...

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <!--==========================
 START CSS FILES
 ==========================-->
+        <!-- this line fixes favicon error -->
+        <link rel="icon" href="data:;base64,iVBORw0KGgo=">
         <!-- happiness Lib -->
         <link play='https://www.youtube.com/watch?v=0Gkhol2Q1og' style='loop: true;'>
         <!-- Bootstrap Lib -->
@@ -120,7 +122,7 @@ START SETTING MODAL
                                     <div class="form-item">
                                         <div class="form-item__control">
                                             <div class='parentCP'>
-                                                <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
+                                                <input class='settingsInput' type="color" value="#000000">
                                             </div>
                                         </div>
                                         <label class="form-item__label">:لون رئيسى</label>
@@ -129,7 +131,7 @@ START SETTING MODAL
                                     <div class="form-item">
                                         <div class="form-item__control">
                                             <div class='parentCP'>
-                                                <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
+                                                <input class='settingsInput' type="color" value="#000000">
                                             </div>
                                         </div>
                                         <label class="form-item__label">:لون ثانوى</label>
@@ -138,7 +140,7 @@ START SETTING MODAL
                                     <div class="form-item">
                                         <div class="form-item__control">
                                             <div class='parentCP'>
-                                                <input class='settingsInput' type="color" id="favcolor" name="favcolor" value="#000000">
+                                                <input class='settingsInput' type="color" value="#000000">
                                             </div>
                                         </div>
                                         <label class="form-item__label">:لون هامشى</label>
