new lib Ohsnap init..

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@ START TAB 4 CONTENT
         <section id="section4" class="tabbed">
 
         </section>
+        <div id="ohsnap"></div>
         <!--==========================
 END TAB 4 CONTENT
 ==========================-->
@@ -249,10 +250,12 @@ START JS SCRIPTS
         <script src="./resources/openseadrag/openseadragon.min.js"></script>
         <!-- Our Main Js file -->
         <script src="./resources/main.js"></script>
-        <!-- Backend Js file (shit starts here) -->
+        <!-- Backend Js file -->
         <script src="./resources/backend.js"></script>
         <!-- Sweet Alert -->
         <script src="resources/sweetalert.js"></script>
+        <!-- Ohsnap -->
+        <script src="resources/ohsnap.min.js"></script>
 
         <!--==========================
 END JS SCRIPTS
