new zoom feature on tap 1 & removed hiding settings when creating.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@ START SETTING MODAL
                                         <label class="form-item__label">:العلامة مائية</label>
                                     </div>
                                     <div class='line'></div>
+                                    <div class="form-item" title='.تفعيل هذا الخيار يمكنك بتكبير المسائل فى نافذة المسائل لرؤيتها بشكل اكبر'>
+                                        <div id='tap1_zoom' class="form-item__control toggle">
+                                            <div class="toggle__handle"></div>
+                                            <div id='chkbxt'>غير مفعل</div>
+                                        </div>
+                                        <label class="form-item__label">:تكبير المسائل</label>
+                                    </div>
+                                    <div class='line'></div>
                                     <h3>الآلوان</h3>
                                     <div class='line'></div>
                                     <div class="form-item" title='لون العناوين الرئيسية بالخط الكبير'>
