warm touch, my dear.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@ START CSS FILES
         <link rel="stylesheet" href="resources/rowReorder.dataTables.min.css">
         <!-- Our Css Main File -->
         <link rel="stylesheet" href="./resources/style.css">
-
         <!--==========================
 END CSS FILES
 ==========================-->
@@ -239,7 +238,15 @@ END TAB 3 CONTENT
 START TAB 4 CONTENT
 ==========================-->
         <section id="section4" class="tabbed">
-
+            
+            <div style="width: 100%;height: 100%;">
+                <div style="height: 100%;text-align: center;">
+                    <video width="420" height="340" style="top:10%;" controls>
+                        <source src="./resources/The%20Smiths%20-%20Heaven%20Knows%20I'm%20Miserable%20Now%20(Official%20Music%20Video).mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+            
         </section>
         <div id="ohsnap"></div>
         <!--==========================
