slight change in sittings

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@ START SETTING MODAL
                                         <label class="form-item__label">:العلامة مائية</label>
                                     </div>
                                     <div class='line'></div>
-                                    <div class="form-item" title='.تفعيل هذا الخيار يمكنك بتكبير المسائل فى نافذة المسائل لرؤيتها بشكل اكبر'>
+                                    <h3>جدول</h3>
+                                    <div class='line'></div>
+                                    <div class="form-item" title='.تفعيل هذا الخيار يمكنك بتكبير المسائل فى نافذة جدول المسائل لرؤيتها بشكل اكبر'>
                                         <div id='tap1_zoom' class="form-item__control toggle">
                                             <div class="toggle__handle"></div>
                                             <div id='chkbxt'>غير مفعل</div>
