--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ START SETTING MODAL
                         <div class="wrapper">
                             <div class="container">
 
-                                <div class="grid">
+                                <div class="grid" style="height: 60vh;;overflow-y: scroll;">
                                     <h3>عام</h3>
                                     <div class='line'></div>
                                     <div class="form-item" title='.نوع الخط المستخدم فى كتابة المسائل'>
